--- a/demka/src/highlight-ta.css
+++ b/demka/src/highlight-ta.css
@@ -1,1 +1,40 @@
-body{width:100%;margin:0;padding:0;font-family:roboto,arial,sans-serif;background-color:#fafafa}main{width:100%;margin:150px auto}section{width:100%}h3{margin:0;font-size:18px;font-weight:lighter}p{margin:0;font-size:14px}input[type=text]{padding:5px;border:2px solid #aaa;border-radius:5px}.mark-style{background-color:rgba(80,244,66,.7);border-radius:2px}h1{text-align:center}.comment-box{width:50%;margin:20px auto;padding:10px;border:2px solid #aaa;border-radius:5px;background-color:#fff;font-family:helvetica,arial,sans-serif;resize:none}@media(min-width:500px){.comment-box{width:80%;max-width:600px}}@media(min-width:1000px){.comment-box{width:70%;max-width:800px}}
+body {
+    width: 100 % ;margin: 0;padding: 0;font - family: roboto,
+    arial,
+    sans - serif;background - color: #fafafa
+}
+main {
+    width: 100 % ;margin: 150 px auto
+}
+section {
+    width: 100 %
+}
+h3 {
+    margin: 0;font - size: 18 px;font - weight: lighter
+}
+p {
+    margin: 0;font - size: 14 px
+}
+input[type = text] {
+    padding: 5 px;border: 2 px solid# aaa;border - radius: 5 px
+}.mark - style {
+    background - color: rgba(80, 244, 66, .7);
+    border - radius: 2 px
+}
+h1 {
+    text - align: center
+}.comment - box {
+    width: 50 % ;margin: 20 px auto;padding: 10 px;border: 2 px solid# aaa;border - radius: 5 px;background - color: #fff;font - family: helvetica,
+    arial,
+    sans - serif;resize: none
+}
+@media(min - width: 500 px) {
+    .comment - box {
+        width: 80 % ;max - width: 600 px
+    }
+}
+@media(min - width: 1000 px) {
+    .comment - box {
+        width: 70 % ;max - width: 800 px
+    }
+}
